--- a/devel/Makefile
+++ b/devel/Makefile
@@ -221,6 +221,7 @@
     SUBDIR += cvsps-devel
     SUBDIR += cvsweb3
     SUBDIR += cxxopts
+    SUBDIR += d-spy
     SUBDIR += darts
     SUBDIR += date
     SUBDIR += dbus
