--- a/x11-toolkits/Makefile
+++ b/x11-toolkits/Makefile
@@ -58,6 +58,7 @@
     SUBDIR += libdazzle
     SUBDIR += libdecor
     SUBDIR += libgdiplus
+    SUBDIR += libgedit-gtksourceview
     SUBDIR += libhandy
     SUBDIR += libshumate
     SUBDIR += libspelling
