--- a/devel/Makefile
+++ b/devel/Makefile
@@ -66,6 +66,7 @@
     SUBDIR += R-cran-magrittr
     SUBDIR += R-cran-memoise
     SUBDIR += R-cran-microbenchmark
+    SUBDIR += R-cran-mlbench
     SUBDIR += R-cran-mockery
     SUBDIR += R-cran-mockr
     SUBDIR += R-cran-modelr
