--- a/java/openjdk11/Makefile
+++ b/java/openjdk11/Makefile
@@ -209,6 +209,14 @@ post-patch:
 		-e 's|%%ICONV_LDFLAGS%%|${ICONV_LDFLAGS}|' \
 		-e 's|%%ICONV_LIBS%%|${ICONV_LIBS}|' \
 		${WRKSRC}/make/autoconf/libraries.m4
+	${REINPLACE_CMD} -e 's|FreeBSD|MidnightBSD|g' \
+		${WRKSRC}/src/jdk.internal.vm.compiler/share/classes/org.graalvm.compiler.hotspot/src/org/graalvm/compiler/hotspot/GraalHotSpotVMConfigBase.java \
+		${WRKSRC}/src/jdk.hotspot.agent/share/classes/sun/jvm/hotspot/utilities/PlatformInfo.java \
+		${WRKSRC}/src/jdk.aot/share/classes/jdk.tools.jaotc.binformat/src/jdk/tools/jaotc/binformat/BinaryContainer.java \
+		${WRKSRC}/src/jdk.aot/share/classes/jdk.tools.jaotc/src/jdk/tools/jaotc/Linker.java \
+		${WRKSRC}/src/java.desktop/share/classes/java/awt/GraphicsEnvironment.java \
+		${WRKSRC}/src/java.desktop/share/classes/sun/print/PSPrinterJob.java \
+		${WRKSRC}/src/java.base/unix/classes/sun/net/PortConfig.java
 
 post-build:
 .if defined(OPENJDK_SYMLINK_CACERTS)
