--- a/textproc/Makefile
+++ b/textproc/Makefile
@@ -409,6 +409,7 @@
     SUBDIR += py-sphinxcontrib-svg2pdfconverter
     SUBDIR += py-sphinxcontrib-towncrier
     SUBDIR += py-sphinxcontrib-websupport
+    SUBDIR += py-texttable
     SUBDIR += py-tinycss
     SUBDIR += py-tinycss2
     SUBDIR += py-toml
