--- a/chinese/p5-Lingua-ZH-Toke/Makefile
+++ b/chinese/p5-Lingua-ZH-Toke/Makefile
@@ -17,4 +17,6 @@ RUN_DEPENDS=	p5-Lingua-ZH-TaBE>=0:chinese/p5-Lingua-ZH-TaBE
 USES=		perl5
 USE_PERL5=	configure
 
+NO_TEST=	yes
+
 .include <bsd.port.mk>
