--- a/x11-toolkits/Makefile
+++ b/x11-toolkits/Makefile
@@ -60,6 +60,7 @@
     SUBDIR += libgdiplus
     SUBDIR += libgedit-gtksourceview
     SUBDIR += libhandy
+    SUBDIR += libpanel
     SUBDIR += libshumate
     SUBDIR += libspelling
     SUBDIR += libunique3
