accessibility/feedbackd: test off

--- a/accessibility/feedbackd/Makefile
+++ b/accessibility/feedbackd/Makefile
@@ -23,6 +23,8 @@ SHEBANG_FILES=	build-aux/post_install.py
 MESON_FALSE=	tests
 GLIB_SCHEMAS=	org.sigxcpu.feedbackd.gschema.xml
 
+NO_TEST=	yes
+
 OPTIONS_DEFINE=	DAEMON DOCS GIR MANPAGES VAPI
 OPTIONS_DEFAULT=DAEMON DOCS GIR MANPAGES VAPI
 OPTIONS_SUB=	yes
