accessibility/sct: lic

--- a/accessibility/sct/Makefile
+++ b/accessibility/sct/Makefile
@@ -7,7 +7,7 @@ MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Utility to change screen temperature
 WWW=		https://github.com/0mp/sct
 
-LICENSE=	UNLICENSE
+LICENSE=	unlicense
 LICENSE_FILE=	${WRKSRC}/LICENSE
 
 USES=		xorg
