--- a/ftp/wzdftpd/Makefile
+++ b/ftp/wzdftpd/Makefile
@@ -48,6 +48,7 @@ PAM_CONFIGURE_WITH=	pam
 
 MYSQL_CONFIGURE_ENABLE=	mysql
 MYSQL_USES=		mysql
+MYSQL_VARS=		IGNORE_WITH_MYSQL="80 81"
 
 PGSQL_CONFIGURE_ON=	--with-pgsql=${LOCALBASE}
 PGSQL_CONFIGURE_OFF=	--disable-pgsql
