--- a/accessibility/sct/Makefile
+++ b/accessibility/sct/Makefile
@@ -14,10 +14,10 @@ USES=		xorg
 USE_GITHUB=	yes
 GH_ACCOUNT=	0mp
 USE_XORG=	x11 xrandr
-MAKE_ARGS=	MANPREFIX=${PREFIX}/share
 INSTALL_TARGET=	install-strip
 
-PLIST_FILES=	bin/sct \
-		share/man/man1/sct.1.gz
+do-install:
+	${CP} ${WRKSRC}/sct ${PREFIX}/bin/sct
+	${CP} ${WRKSRC}/sct.1 ${PREFIX}/share/man/man1/
 
 .include <bsd.port.mk>
