--- a/java/openjdk11/Makefile
+++ b/java/openjdk11/Makefile
@@ -147,7 +147,7 @@ BOOTSTRAPJDKDIR=	${BJDK}
 .endfor
 
 # if no valid jdk found, set dependency
-.if !defined(BOOTSTRAPJDKDIR)
+.if !defined(BOOTSTRAPJDKDIR) || defined(MAGUS)
 BOOTSTRAPJDKDIR?=	${LOCALBASE}/bootstrap-openjdk11
 BUILD_DEPENDS+=		${BOOTSTRAPJDKDIR}/bin/javac:java/bootstrap-openjdk11
 .endif
