print/tex-xetex: update

--- a/print/tex-xetex/Makefile
+++ b/print/tex-xetex/Makefile
@@ -1,8 +1,8 @@
 PORTNAME=	xetex
-PORTVERSION=	0.99993
-PORTREVISION=	3
+DISTVERSION=	${TEXLIVE_VERSION}
+PORTREVISION=	1
 CATEGORIES=	print
-MASTER_SITES=	ftp://tug.org/historic/systems/texlive/2015/
+MASTER_SITES=	TEX_CTAN/systems/texlive/${TEXLIVE_YEAR}/
 PKGNAMEPREFIX=	tex-
 DISTNAME=	texlive-${TEXLIVE_VERSION}-source
 DISTFILES=	${DISTNAME}${EXTRACT_SUFX} \
@@ -24,9 +24,9 @@ LIB_DEPENDS=	libfontconfig.so:x11-fonts/fontconfig \
 		libpng.so:graphics/png \
 		libTECkit.so:textproc/teckit
 
-USES=		compiler:c++11-lib localbase gnome perl5 pkgconfig \
+USES=		compiler:c++17-lang localbase gnome perl5 pkgconfig \
 		python:build tar:xz tex xorg
-USE_CXXSTD=	gnu++11
+USE_CXXSTD=	c++17
 USE_GNOME=	cairo
 USE_PERL5=	build
 USE_TEX=	kpathsea web2c formats fmtutil dvipdfmx
@@ -49,6 +49,7 @@ CONFIGURE_ARGS+=CC="${CC}" \
 		--with-teckit-libdir=${LOCALBASE}/lib \
 		--with-system-zziplib \
 		--with-system-zlib
+CONFIGURE_ENV+=	${MAKE_ENV}
 .for L in cairo gmp kpathsea libpng mpfr pixman ptexenc icu
 CONFIGURE_ARGS+=--with-system-$L \
 		--with-$L-include=${LOCALBASE}/include \
