--- a/print/tex-xetex/Makefile
+++ b/print/tex-xetex/Makefile
@@ -1,6 +1,6 @@
 PORTNAME=	xetex
-PORTVERSION=	0.99993
-PORTREVISION=	3
+PORTVERSION=	${TEXLIVE_VERSION}
+PORTREVISION=	0
 CATEGORIES=	print
 MASTER_SITES=	ftp://tug.org/historic/systems/texlive/2015/
 PKGNAMEPREFIX=	tex-
@@ -24,9 +24,9 @@ LIB_DEPENDS=	libfontconfig.so:x11-fonts/fontconfig \
 		libpng.so:graphics/png \
 		libTECkit.so:textproc/teckit
 
-USES=		compiler:c++11-lib localbase gnome perl5 pkgconfig \
+USES=		compiler:c++17-lang localbase gnome perl5 pkgconfig \
 		python:build tar:xz tex xorg
-USE_CXXSTD=	gnu++11
+USE_CXXSTD=	c++17
 USE_GNOME=	cairo
 USE_PERL5=	build
 USE_TEX=	kpathsea web2c formats fmtutil dvipdfmx
