java/openjdk17-jre: not parallel

--- a/java/openjdk17-jre/Makefile
+++ b/java/openjdk17-jre/Makefile
@@ -5,4 +5,6 @@ COMMENT=	Java Runtime Environment ${JDK_MAJOR_VERSION}
 BUILD_JRE=	yes
 MASTERDIR=	${.CURDIR}/../openjdk17
 
+MAKE_JOBS_UNSAFE=yes
+
 .include "${MASTERDIR}/Makefile"
