--- a/devel/aws-c-http/Makefile
+++ b/devel/aws-c-http/Makefile
@@ -1,6 +1,6 @@
 PORTNAME=	aws-c-http
 DISTVERSIONPREFIX=	v
-DISTVERSION=	0.10.1
+DISTVERSION=	0.10.8
 CATEGORIES=	devel
 
 MAINTAINER=	ports@MidnightBSD.org
@@ -25,5 +25,7 @@ USE_LDCONFIG=	yes
 
 CMAKE_ON=	BUILD_SHARED_LIBS
 CMAKE_OFF=	BUILD_TESTING
+
+NO_TEST=	yes
 
 .include <bsd.port.mk>
