--- a/net/libyang2/Makefile
+++ b/net/libyang2/Makefile
@@ -20,10 +20,6 @@ USE_LDCONFIG=	yes
 USE_GITHUB=	yes
 GH_ACCOUNT=	CESNET
 
-TEST_TARGET=	test
-
-OPTIONS_DEFINE=	TEST
-
-TEST_CMAKE_BOOL=	ENABLE_TESTS
+NO_TEST=	yes
 
 .include <bsd.port.mk>
