multimedia/smpeg: fix a build issue

--- a/multimedia/smpeg/Makefile
+++ b/multimedia/smpeg/Makefile
@@ -17,7 +17,7 @@ USE_LDCONFIG=	yes
 
 GNU_CONFIGURE=	yes
 CONFIGURE_ENV=	GLBASE="${LOCALBASE}" \
-		CC="${CXX}" REAL_CC="${CC}" \
+		CC="${CC}" CXX="${CXX} -std=gnu++98" \
 		SDL_CONFIG="${SDL_CONFIG}"
 #If you want to try the opengl/gtk player (which doesn't seem to work)
 #comment out the following line.
