--- a/devel/spirv-llvm-translator/Makefile
+++ b/devel/spirv-llvm-translator/Makefile
@@ -1,8 +1,14 @@
 PORTNAME=	spirv-llvm-translator
 DISTVERSIONPREFIX=	v
 DISTVERSION=	${DISTVERSION_${FLAVOR}}
-DISTVERSION_llvm15=	15.0.0
-DISTVERSION_llvm12=	12.0.0
+DISTVERSION_llvm21=	21.1.3
+DISTVERSION_llvm20=	20.1.9
+DISTVERSION_llvm19=	19.1.14
+DISTVERSION_llvm18=	18.1.19
+DISTVERSION_llvm17=	17.0.19
+DISTVERSION_llvm16=	16.0.19
+DISTVERSION_llvm15=	15.0.19
+DISTVERSION_llvm12=	12.0.1
 CATEGORIES=	devel
 PKGNAMESUFFIX=	-${FLAVOR}
 
@@ -15,27 +21,36 @@ LICENSE_FILE=	${WRKSRC}/LICENSE.TXT
 
 LIB_DEPENDS=	libLLVM-${FLAVOR:S/llvm//}.so:devel/${FLAVOR}
 
-FLAVORS=	${15 12:L:S/^/llvm/}
+FLAVORS=	${21 20 19 18 17 16 15 12:L:S/^/llvm/}
+CONFLICTS_BUILD=${FLAVOR}-lite
 
 USES=		cmake compiler:c++11-lib
 USE_GITHUB=	yes
 USE_LDCONFIG=	${PREFIX}/${FLAVOR}/lib
 GH_ACCOUNT=	KhronosGroup
 GH_PROJECT=	SPIRV-LLVM-Translator
-GH_TUPLE=	${GH_TUPLE_${FLAVOR}}
-GH_TUPLE_llvm15=KhronosGroup:SPIRV-Headers:1.5.4.raytracing.fixed-168-g5a12186:headers/projects/SPIRV-Headers
+.if ${FLAVOR:U:Mllvm1[12]}
+# empty
+.elif ${FLAVOR:U} == llvm13
+GH_TUPLE=	KhronosGroup:SPIRV-Headers:1.5.4.raytracing.fixed-411-gaa6cef1:headers/projects/SPIRV-Headers
+.else
+GH_TUPLE=	KhronosGroup:SPIRV-Headers:1.5.4.raytracing.fixed-446-g01e0577:headers/projects/SPIRV-Headers
+.endif
 DISTINFO_FILE=	${.CURDIR}/distinfo.${FLAVOR}
+CXXFLAGS+=	${${FLAVOR:S/llvm//} < 16 && ${COMPILER_TYPE} == clang:?-Wno-enum-constexpr-conversion:}
 CMAKE_ON=	BUILD_SHARED_LIBS LLVM_BUILD_TOOLS LLVM_TOOL_SPIRV_HEADERS_BUILD
 CMAKE_ARGS=	-DLLVM_DIR:PATH="${LOCALBASE}/${FLAVOR}"
+CMAKE_ARGS+=	${${FLAVOR:S/llvm//}==11:?-DBASE_LLVM_VERSION=11.0:}
 CMAKE_INSTALL_PREFIX=		${PREFIX}/${FLAVOR}
 _PLIST_FILES=	bin/llvm-spirv \
 		include/LLVMSPIRVLib/LLVMSPIRVExtensions.inc \
 		include/LLVMSPIRVLib/LLVMSPIRVLib.h \
 		include/LLVMSPIRVLib/LLVMSPIRVOpts.h \
 		lib/libLLVMSPIRVLib.so \
-		lib/libLLVMSPIRVLib.so.${DISTVERSION:R:R} \
+		lib/libLLVMSPIRVLib.so.${SOVERSION} \
 		libdata/pkgconfig/LLVMSPIRVLib.pc
 PLIST_FILES=	${_PLIST_FILES:S,^,${FLAVOR}/,}
+SOVERSION=	${${FLAVOR:S/llvm//}<18:?${DISTVERSION:R:R}:${DISTVERSION:R}}
 
 post-patch:
 	@${REINPLACE_CMD} -e '/pkgconfig/s/lib/&data/' \
