--- a/www/linux-rl9-qt5-qtwebsockets/Makefile
+++ b/www/linux-rl9-qt5-qtwebsockets/Makefile
@@ -13,7 +13,7 @@ LICENSE=	gpl2+
 
 USES=		linux:rl9
 USE_LDCONFIG=	yes
-USE_LINUX=	cups-libs dbuslibs dri jpeg libxml2 png qtbase tiff xorglibs webp
+USE_LINUX=	cups-libs dbuslibs dri imageformats-libs libxml2 qtbase xorglibs
 USE_LINUX_RPM=	yes
 WANT_LINUX32=	yes
 
