--- a/x11-fm/filerunner/Makefile
+++ b/x11-fm/filerunner/Makefile
@@ -1,10 +1,10 @@
 # created by:	Chris Hutchinson <midnightbsd@BSDforge.com>
 
 PORTNAME=	filerunner
-PORTVERSION=	23.03.07.16
+DISTVERSION=	24.07.12.20
 CATEGORIES=	x11-fm tk
-MASTER_SITES=	SF/${PORTNAME}/release-${PORTVERSION}
-DISTNAME=	fr-${PORTVERSION}
+MASTER_SITES=	SF/${PORTNAME}/release-${DISTVERSION}
+DISTNAME=	fr-${DISTVERSION}
 
 MAINTAINER=	midnightbsd@BSDforge.com
 COMMENT=	Tcl/Tk-based filemanager with FTP capabilities
@@ -12,27 +12,21 @@ WWW=		https://sourceforge.net/projects/filerunner/
 
 LICENSE=	gpl2
 
-WRKSRC=		${WRKDIR}/${PORTNAME}
-NO_BUILD=	yes
-
-USES=		desktop-file-utils
-USES+=		tk:run
-
+USES=		shebangfix tk:run
 USE_LDCONFIG=	yes
 
-post-patch:
-	${REINPLACE_CMD} -i '' -e 's|/usr/bin/env wish|${WISH}|' ${WRKSRC}/fr
+SHEBANG_FILES=	fr frftp
+tk_OLD_CMD=	"/usr/bin/env wish"
+
+NO_BUILD=	yes
+
+WRKSRC=		${WRKDIR}/${PORTNAME}
 
 do-install:
-	@${MKDIR} ${STAGEDIR}${DATADIR}
-	cd ${WRKSRC} && ${COPYTREE_SHARE} \* ${STAGEDIR}${DATADIR}
-.for file in fr frftp
-	@${CHMOD} ${BINMODE} ${STAGEDIR}${DATADIR}/${file}
-.endfor
-	@${LN} -sf ${DATADIR}/fr ${STAGEDIR}${PREFIX}/bin/fr
-	@${MKDIR} ${STAGEDIR}${PREFIX}/share/applications/
-	${CP} ${WRKSRC}/Makefiles/filerunner.desktop ${STAGEDIR}${PREFIX}/share/applications/
-	${CP} ${WRKSRC}/icons/filerunner-48x48.png ${STAGEDIR}${PREFIX}/share/pixmaps/filerunner.png
+	(cd ${WRKSRC} && ${COPYTREE_SHARE} . ${STAGEDIR}${DATADIR} \
+		'! ( -name fr -o -name frftp ) ')
+	${INSTALL_SCRIPT} ${WRKSRC}/fr ${WRKSRC}/frftp ${STAGEDIR}${DATADIR}
+	${RLN} ${STAGEDIR}${DATADIR}/fr ${STAGEDIR}${PREFIX}/bin
 	${FIND} ${FAKE_DESTDIR}${TRUE_PREFIX} -type f -iname '*.orig' -delete
 
 .include <bsd.port.mk>
