finance/expense: bug fix

--- a/finance/expense/Makefile
+++ b/finance/expense/Makefile
@@ -1,5 +1,3 @@
-
-
 PORTNAME=	expense
 PORTVERSION=	0.1
 PORTREVISION=	2
@@ -9,6 +7,7 @@ DISTNAME=	Expense-${PORTVERSION}
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Application to track your expense under GNUstep
+WWW=		https://www.eskimo.com/~pburns/Expense/
 
 LICENSE=	gpl2
 
@@ -17,7 +16,13 @@ USE_GNUSTEP=	back build
 
 WRKSRC=		${WRKDIR}/Expense
 
+PORTSCOUT=	ignore:1
+
 post-install:
 	${STRIP_CMD} ${PREFIX}/GNUstep/System/Applications/Expense.app/Expense
+
+post-patch:
+	@${REINPLACE_CMD} -e '/_recordSort/s,^int,NSComparisonResult,' \
+		${WRKSRC}/LedgerModel.[hm]
 
 .include <bsd.port.mk>
