--- a/dns/py-idna/Makefile
+++ b/dns/py-idna/Makefile
@@ -1,7 +1,8 @@
 PORTNAME=	idna
-PORTVERSION=	3.7
+PORTVERSION=	3.11
 CATEGORIES=	dns python
-MASTER_SITES=	PYPI
+MASTER_SITES=	PYPI \
+		https://github.com/kjd/idna/releases/download/v${PORTVERSION}/
 PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
 
 MAINTAINER=	ports@MidnightBSD.org
@@ -11,7 +12,7 @@ WWW=		https://github.com/kjd/idna
 LICENSE=	bsd3
 LICENSE_FILE=	${WRKSRC}/LICENSE.md
 
-BUILD_DEPENDS=	${PYTHON_PKGNAMEPREFIX}flit-core>=3.2<4:devel/py-flit-core@${PY_FLAVOR}
+BUILD_DEPENDS=	${PYTHON_PKGNAMEPREFIX}flit-core>=3.11<4:devel/py-flit-core@${PY_FLAVOR}
 
 USES=		python
 USE_PYTHON=	autoplist concurrent pep517 unittest
