--- a/devel/py-setuptools-scm/Makefile
+++ b/devel/py-setuptools-scm/Makefile
@@ -30,5 +30,6 @@ NO_TEST=	yes
 
 post-patch:
 	@${REINPLACE_CMD} -e '497,521s|"gpg|"gpg2|' ${WRKSRC}/testing/test_git.py
+	@${REINPLACE_CMD} -e 's/"GIT_SSH", "GIT_SSH_COMMAND"/"GIT_SSH", "GIT_SSH_COMMAND", "GIT_CEILING_DIRECTORIES"/' ${WRKSRC}/src/setuptools_scm/_run_cmd.py
 
 .include <bsd.port.mk>
