--- a/devel/py-txaio/Makefile
+++ b/devel/py-txaio/Makefile
@@ -1,19 +1,26 @@
 PORTNAME=	txaio
-PORTVERSION=	18.8.1
+PORTVERSION=	22.2.1
 CATEGORIES=	devel python
 MASTER_SITES=	PYPI
 PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Compatibility API between asyncio/Twisted/Trollius
+WWW=		https://github.com/crossbario/txaio
 
 LICENSE=	mit
 LICENSE_FILE=	${WRKSRC}/LICENSE
 
-RUN_DEPENDS=	${PYTHON_PKGNAMEPREFIX}six>0:devel/py-six@${PY_FLAVOR}
-
 USES=		python
 USE_PYTHON=	autoplist distutils
+
+OPTIONS_DEFINE=		TWISTED
+OPTIONS_DEFAULT=	TWISTED
+
+TWISTED_DESC=	Twisted network backend support
+
+TWISTED_RUN_DEPENDS=	${PYTHON_PKGNAMEPREFIX}twisted>=20.3.0:devel/py-twisted@${PY_FLAVOR} \
+			${PYTHON_PKGNAMEPREFIX}zope.interface>=5.2.0:devel/py-zope.interface@${PY_FLAVOR}
 
 NO_TEST=	yes
 
