add ldb and start work on samba 4.19

--- a/databases/Makefile
+++ b/databases/Makefile
@@ -34,6 +34,7 @@
     SUBDIR += hiredis
     SUBDIR += kyotocabinet
     SUBDIR += ldb25
+    SUBDIR += ldb28
     SUBDIR += leveldb
     SUBDIR += libgda5
     SUBDIR += libgda5-bdb
