--- a/x11-toolkits/gtksourceview2/Makefile
+++ b/x11-toolkits/gtksourceview2/Makefile
@@ -2,8 +2,8 @@ PORTNAME=	gtksourceview2
 PORTVERSION=	2.10.5
 PORTREVISION?=	8
 CATEGORIES=	x11-toolkits gnome
-MASTER_SITES=	GNOME/sources/${PORTNAME:S/2$//}/${PORTVERSION:C/^([0-9]+\.[0-9]+).*/\1/}
-DISTNAME=	${PORTNAME:S/2$//}-${PORTVERSION}
+MASTER_SITES=	GNOME
+DISTNAME=	${PORTNAME:S/2$//}-${DISTVERSION}
 DIST_SUBDIR=	gnome2
 
 MAINTAINER=	ports@MidnightBSD.org
@@ -11,14 +11,18 @@ COMMENT=	Widget that adds syntax highlighting to GtkTextView
 
 LICENSE=	gpl2
 
-USES=		tar:bzip2
 USE_GCC=	yes
-
-USES+=		gettext gmake gnome libtool localbase pathfix pkgconfig
-USE_LDCONFIG=	yes
+USES=		gettext gmake gnome libtool localbase pathfix pkgconfig tar:bzip2
 USE_GNOME=	gnomeprefix gtk20 libxml2 intlhack
+USE_LDCONFIG=	yes
+
 GNU_CONFIGURE=	yes
-CONFIGURE_ARGS=	--enable-compile-warnings=no --enable-glade-catalog=no
+
 INSTALL_TARGET=	install-strip
+PORTSCOUT=	ignore:1
+
+CONFIGURE_ARGS=	--enable-compile-warnings=no \
+		--enable-glade-catalog=no \
+		--disable-gtk-doc-html
 
 .include <bsd.port.mk>
