--- a/chinese/pyzy/Makefile
+++ b/chinese/pyzy/Makefile
@@ -11,6 +11,7 @@ LICENSE=	lgpl2.1
 
 BUILD_DEPENDS+=	${LOCALBASE}/bin/sqlite3:databases/sqlite3
 LIB_DEPENDS=	libsqlite3.so:databases/sqlite3
+RUN_DEPENDS+=	${LOCALBASE}/bin/sqlite3:databases/sqlite3
 
 USES=		autoreconf compiler:c++11-lang gettext-runtime gmake gnome \
 		libtool pathfix pkgconfig python:build shebangfix
